# learn_ope

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
src/: main.py  schema.py  type_defs.py  utils.py
src/dataset/: base.py  synthetic.py  synthetic_slate.py  synthtic_slate.py
src/ope/: estimators_slate.py  meta_slate.py  regression_model_slate.py
